samples/_failures_safe/1761225954_d870e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ef4c46c.c: In function ‘main’:
./samples/SAFE/__tmp_2ef4c46c.c:152:17: error: expected expression at end of input
  152 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_2ef4c46c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ef4c46c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ef4c46c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ef4c46c.c:152:17: error: expected declaration or statement at end of input
